style.css
@font-face {
    src: url("./police/tarekah-font/Tarekah-G330y.otf") format("opentype");
    font-family: "Tarekah";
}

@font-face {
    src: url("./police/Abhaya_Libre/AbhayaLibre-Regular.ttf") format("truetype");
    font-family: "Abhaya Libre";
}
/*Permet de d'importer une police locale */

/*Style du html et body */
html {
    height: 100%;
}

/*Le contenu du body restera au centre lorsque le viewport est plus grand horizontalement que celle-ci*/
body {
    background-color: rgb(33, 37, 41);
    font-family: "Abhaya Libre";
    color: white;
    height: 100%;
    margin: 0;
    display: flex;
    flex-direction: column;

}

/* Style du containeur principal. */
.page {
    max-width: 1440px;
    min-height: 100vh;
    margin: 0 auto 0 auto;
    display: flex;
    flex-direction: column;
    flex: 1;
    padding: 0 20px;
}

/*Navigation */
nav {
    display: flex;
    justify-content: center;
    align-items: center;

    padding-top: 2%;

}



footer {
    padding-bottom: 2%;
    padding-top: 2%;
    width: 100%;
    text-align: center;
}

/*Enlève le style que la list a par défault */
.lien {
    list-style: none;
    display: flex;
}

.lien li {
    display: flex;
    align-items: center;
    margin: 0 70px;
}

a {
    text-decoration: none;
    font-size: 2.5vw;
    color: white;

}

a:hover {
    text-decoration: underline;
}

.section {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 70vh;
}

header {
    margin: 10% 0 10% 0;
    height: auto;

}

/* Style de la signature */
.heros {
    display: grid; /*M'a permis de superposer les signatures */
    justify-items: center;
    position: relative;

}


/* Le h1 est utlisé dans la signature et les titre des projets*/
h1 {
    font-family: "Tarekah";
    font-weight: normal;
    font-size: 8vw;
}

/*Le grid-area m'a permis de superposer les signature */ 
.signature {
    font-style: italic;
    grid-area: 1/1/2/2;
    opacity: 100%;
    z-index: 4;

}

.signature.deux {
    color: rgb(222, 226, 230);
    opacity: 40%;
    grid-area: 1/1/4/2;
    padding: 10px 0px 0px 0px;
    filter: blur(3px);
    z-index: 3;
}

.signature.trois {
    grid-area: 1/1/4/2;
    color: rgb(173, 181, 189);
    padding: 20px 0px 0px 0px;
    opacity: 60%;
    filter: blur(3px);
    z-index: 2;
}

.signature.quatre {
    grid-area: 1/1/4/2;
    filter: blur(3px);
    opacity: 90%;
    color: rgb(73, 80, 87);
    padding: 30px 0px 0px 0px;
    z-index: 1;
}

h2 {
    font-size: 5vw;
    font-weight: normal;
    display: flex;
    justify-content: center;
}

p {
    font-size: 2vw;
}

.ligne {
    height: 1vh;
    width: 60vw;
    background-color: white;
    padding: 0.2vh;
    box-shadow: 0 0 7px 7px white;
}

img {
    width: 40%;
}



.carrousel {
    display: flex;
    flex-direction: row;
    gap: 2%;
}


.couverture {
    position: relative;
    height: 40vh;
    transition: 0.5s;
    border: 20px solid rgb(73, 80, 87);
}

/*La transition permet d'adoucir et de mettre une durée au changement */
.couverture img {
    width: 100%;
    height: 100%;
    display: block;
    object-fit: cover;
    transition: 0.5s;
}

.text {
    position: absolute;
    bottom: 0;
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    opacity: 0;
    transition: 0.5s;
    color: white;
    text-align: center;
}
/*Le :hover permet de mettre des effets au faire des changements au survol de la souris */
.couverture:hover {
    border-width: 0;
    box-shadow: 0 0 15px 15px rgb(73, 80, 87);
}
/*Lorsque couverture est survoler, l'image obtient un filtre et devient plus grands */
.couverture:hover img {
    transform: scale(1.1);
    filter: brightness(50%);
}
/*Lorsque la couverture et survoler, le texte apparait */
.couverture:hover .text {
    opacity: 1;
}


p.propos {
    width: 45%;
}

/*Permet de mettre une distance entre les éléments*/
.info.propos {
    gap: 10vw;
}


.competences {
    display: flex;
    justify-content: center;
    align-items: start;
    gap: 120px;
}

.logo {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    justify-items: center;
    align-items: center;
    row-gap: 40px;
    column-gap: 60px;
}

.icon {
    width: 80%;
}

.categorie {
    position: absolute;
    bottom: 30px;
}

.svg {
    width: 5vw;
    margin: 2vw;
    transition: 0.5s;
}

.svg:hover {
    transform: scale(1.3);
}

.info {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    gap: 20vw;
    width: 100%;
}

/*Enleve le text-decoration, puisque l'autre a au survol a un text-direction*/
.info a{
    text-decoration: none;
}

h3 {
    font-size: 50px;
}

.resume {
    font-size: 25px;
}

.section.titre {
    height: 60vh;
}

.galerie {
    display: flex;
    flex-direction: row;
    gap: 2%;
    justify-content: center;
}
/*:has permet de mettre des paramètres au .galerie si il a des images */
.galerie:has(img) {
    grid-template-columns: repeat(auto-fit, minmax(33%, 1fr));

}


.galerie img {
    width: 100%;
    height: auto;
    display: block;
    object-fit: cover;
    transition: 0.5s;
}

.galerie img:hover {
    transform: scale(1.3);
    box-shadow: 0 0 15px 15px rgb(73, 80, 87);
}

.galerie video {
    width: 100%;
}


.section.logiciel img {
    width: 20%;
}

.extra {
    width: 50%;
    transition: 0.5s;
}

.extra:hover {
    transform: scale(1.1);
    box-shadow: 0 0 15px 15px rgb(73, 80, 87);
}

#page-projet .section {
    margin: 5% 0 5% 0;
}

/* Ceci permet de changer la disposition ou les valeurs lorsque le viewport répond aux restrictions*/
/*Ceci et les vw/vh/% ont permis de faire la page responsive */
@media (max-width: 768px) {
    /*Permet de changer la taille de celui-ci */
    .section.projet {
        margin-top: 10vh;
        height: auto;
    }
/*Permet de changer la direction du carrousel */
    .carrousel {
        display: flex;
        flex-direction: column;
        gap: 20px;

    }
    /*Permet de changer la taille de celui-ci */
    .couverture {
        height: 30vh;
    }
/*Permet de changer la direction du carrousel */
    .info{
        flex-direction: column;
        gap: 5vw;
        text-align: center;
    }
}

